--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "postcss-class-prefix",
+  "name": "postcss-slds-prefix",
   "version": "0.3.0",
-  "description": "A class prefixer/namespacer for postcss",
+  "description": "A custom prefixer for the Salesforce Lightning Design System",
   "files": [
     "index.js"
   ],
   "dependencies": {
-    "postcss": "^5.0.4"
+    "postcss": "^5.2.0"
   },
   "devDependencies": {
-    "mocha": "^2.0.0"
+    "mocha": "^3.0.2"
   },
   "scripts": {
     "test": "mocha"
@@ -17,11 +17,14 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/thompsongl/postcss-class-prefix.git"
+    "url": "https://github.com/salesforce-ux/postcss-slds-prefix.git"
   },
   "keywords": [
     "css",
     "postcss",
+    "salesforce",
+    "slds",
+    "design-system",
     "postcss-plugin"
   ]
 }
